# prismlauncher-nix

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
components/: default.nix  lib.nix
components/versions/: 0.nix  1.0.nix  1.1.nix  1.10-pre1.nix  1.10-pre2.nix  1.10.1.nix  1.10.2.nix  1.10.nix  1.11-pre1.nix  1.11.1.nix  1.11.2.nix  1.11.nix  1.12-pre1.nix  1.12-pre2.nix  1.12-pre3.nix  1.12-pre4.nix  1.12-pre5.nix  1.12-pre6.nix  1.12-pre7.nix  1.12.1-pre1.nix  1.12.1.nix  1.12.2-pre1.nix  1.12.2-pre2.nix  1.12.2.nix  1.12.nix  1.13-pre1.nix  1.13-pre10.nix  1.13-pre2.nix  1.13-pre3.nix  1.13-pre4.nix  1.13-pre5.nix  1.13-pre6.nix  1.13-pre7.nix  1.13-pre8.nix  1.13-pre9.nix  1.13.1-pre1.nix  1.13.1-pre2.nix  1.13.1.nix  1.13.2-pre1.nix  1.13.2-pre2.nix  (+1737 more)
homeModules/prismlauncher-nix/: default.nix  instance.nix  launcher.nix  options.nix  prism.nix
lib/: default.nix  pkgs.nix  types.nix
prismgen/src/: args.rs  cli.rs  error.rs  main.rs  nix.rs  prism.rs
prismgen/src/util/: client.rs  mod.rs  nix.rs  prism.rs
resources/: default.nix  options.nix
