[package]
author = "qoW"
name = "prismgen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prismgen"
path = "prismgen/src/main.rs"

[dependencies]
reqwest        = {version = "0.13.4", features = ["json"]  }
tokio          = {version = "1.52.3", features = ["full"]  }
serde          = {version = "1.0"   , features = ["derive"]}
clap           = {version = "4.6.1" , features = ["derive"]}
lenient_semver = {version = "0.4.2" , features = ["version_lite"]}
